//@flow

import {
  createStore,
  type Store,
  combine,
  createEvent,
  type Event,
} from 'effector'
import {show} from 'effector/fixtures/showstep'

import {spy} from 'effector/fixtures'

test('graphite', () => {
  const fn = jest.fn()
  const fn1 = jest.fn()
  const foo: Event<number> = createEvent('foo')
  const bar = foo.map(x => (fn(x), x + 1))
  const store1: Store<string> = createStore('foo').on(bar, (state, bar) =>
    [state, bar].join(' | '),
  )
  const store2 = store1.map(e => e.length)
  const unsub1 = bar.watch(fn1)
  foo(0)
  foo(10)
  expect(fn).toHaveBeenCalledTimes(2)
  expect(store1.getState()).toBe('foo | 1 | 11')
  //$todo
  const showBar = show(bar.graphite)

  expect(showBar).toMatchSnapshot('show bar')
  unsub1()
  //$todo
  const showBar2 = show(bar.graphite)
  expect(showBar2).toMatchSnapshot('show bar')
  foo(100)
  expect(fn1).toHaveBeenCalledTimes(2)
  //$todo
  const showFoo = show(foo.graphite)
  //$todo
  const showStore = show(store1.graphite)
  //$todo
  const showStore2 = show(store2.graphite)
  expect(showFoo).toMatchSnapshot('show foo')
  expect(showStore).toMatchSnapshot('show store1')
  expect(showStore2).toMatchSnapshot('show store2')
})

test('showcase', () => {
  const foo = createEvent('foo')
  const bar = createEvent('bar')

  const a = createStore(1)
  const b = createStore(2)
  const bigStore = combine({a, b})
  const mapped = bigStore.map(s => s.a)

  a.on(foo, n => n + 1)
  b.on(bar, n => n + 1)

  mapped.watch(spy)

  foo()
  foo()

  bar()
  bar()
  bar()
  bar()

  //$todo
  expect(show(a.graphite)).toMatchSnapshot('store a')
  //$todo
  expect(show(foo.graphite)).toMatchSnapshot('event foo')
  //$todo
  expect(show(mapped.graphite)).toMatchSnapshot('mapped')
  expect(spy).toHaveBeenCalledTimes(3)
  const first = createStore('s')
  const second = createStore('h')
  const third = createStore('i')
  const status = combine(first, second, third, (a, b, c) => [a, b, c].join(''))
  expect(status.getState()).toBe('shi')
})
