// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graphite: show bar 1`] = `
"Node {
  seq: [],
  next: [
    Node {
      seq: [
        mov: store a,
        compute: Function,
        check: defined,
        check: changed,
        mov: stack store
      ],
      next: [
        Node {
          seq: [
            check: defined,
            mov: stack store,
            check: changed,
            mov: stack store
          ],
          next: [
            Node {seq: [], next: []},
            Node {
              seq: [
                mov: store a,
                compute: Function,
                check: defined,
                check: changed,
                mov: stack store
              ],
              next: [
                Node {
                  seq: [
                    check: defined,
                    mov: stack store,
                    check: changed,
                    mov: stack store
                  ],
                  next: [
                    Node {seq: [], next: []}
                  ]
                }
              ]
            }
          ]
        }
      ]
    },
    Node {
      seq: [
        run: watcher
      ],
      next: []
    }
  ]
}"
`;

exports[`graphite: show bar 2`] = `
"Node {
  seq: [],
  next: [
    Node {
      seq: [
        mov: store a,
        compute: Function,
        check: defined,
        check: changed,
        mov: stack store
      ],
      next: [
        Node {
          seq: [
            check: defined,
            mov: stack store,
            check: changed,
            mov: stack store
          ],
          next: [
            Node {seq: [], next: []},
            Node {
              seq: [
                mov: store a,
                compute: Function,
                check: defined,
                check: changed,
                mov: stack store
              ],
              next: [
                Node {
                  seq: [
                    check: defined,
                    mov: stack store,
                    check: changed,
                    mov: stack store
                  ],
                  next: [
                    Node {seq: [], next: []}
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`graphite: show foo 1`] = `
"Node {
  seq: [],
  next: [
    Node {
      seq: [
        compute: Function
      ],
      next: [
        Node {
          seq: [],
          next: [
            Node {
              seq: [
                mov: store a,
                compute: Function,
                check: defined,
                check: changed,
                mov: stack store
              ],
              next: [
                Node {
                  seq: [
                    check: defined,
                    mov: stack store,
                    check: changed,
                    mov: stack store
                  ],
                  next: [
                    Node {seq: [], next: []},
                    Node {
                      seq: [
                        mov: store a,
                        compute: Function,
                        check: defined,
                        check: changed,
                        mov: stack store
                      ],
                      next: [
                        Node {
                          seq: [
                            check: defined,
                            mov: stack store,
                            check: changed,
                            mov: stack store
                          ],
                          next: [
                            Node {seq: [], next: []}
                          ]
                        }
                      ]
                    }
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`graphite: show store1 1`] = `
"Node {
  seq: [
    check: defined,
    mov: stack store,
    check: changed,
    mov: stack store
  ],
  next: [
    Node {seq: [], next: []},
    Node {
      seq: [
        mov: store a,
        compute: Function,
        check: defined,
        check: changed,
        mov: stack store
      ],
      next: [
        Node {
          seq: [
            check: defined,
            mov: stack store,
            check: changed,
            mov: stack store
          ],
          next: [
            Node {seq: [], next: []}
          ]
        }
      ]
    }
  ]
}"
`;

exports[`graphite: show store2 1`] = `
"Node {
  seq: [
    check: defined,
    mov: stack store,
    check: changed,
    mov: stack store
  ],
  next: [
    Node {seq: [], next: []}
  ]
}"
`;

exports[`showcase: event foo 1`] = `
"Node {
  seq: [],
  next: [
    Node {
      seq: [
        mov: store a,
        compute: Function,
        check: defined,
        check: changed,
        mov: stack store
      ],
      next: [
        Node {
          seq: [
            check: defined,
            mov: stack store,
            check: changed,
            mov: stack store
          ],
          next: [
            Node {seq: [], next: []},
            Node {
              seq: [
                check: defined,
                filter: Function,
                compute: Function,
                compute: Function,
                barrier: {
                  barrierID: 1,
                  priority: barrier
                },
                compute: Function
              ],
              next: [
                Node {
                  seq: [
                    check: defined,
                    mov: stack store,
                    check: changed,
                    mov: stack store
                  ],
                  next: [
                    Node {seq: [], next: []},
                    Node {
                      seq: [
                        mov: store a,
                        compute: Function,
                        check: defined,
                        check: changed,
                        mov: stack store
                      ],
                      next: [
                        Node {
                          seq: [
                            check: defined,
                            mov: stack store,
                            check: changed,
                            mov: stack store
                          ],
                          next: [
                            Node {seq: [], next: []},
                            Node {
                              seq: [
                                run: watcher
                              ],
                              next: []
                            }
                          ]
                        }
                      ]
                    }
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`showcase: mapped 1`] = `
"Node {
  seq: [
    check: defined,
    mov: stack store,
    check: changed,
    mov: stack store
  ],
  next: [
    Node {seq: [], next: []},
    Node {
      seq: [
        run: watcher
      ],
      next: []
    }
  ]
}"
`;

exports[`showcase: store a 1`] = `
"Node {
  seq: [
    check: defined,
    mov: stack store,
    check: changed,
    mov: stack store
  ],
  next: [
    Node {seq: [], next: []},
    Node {
      seq: [
        check: defined,
        filter: Function,
        compute: Function,
        compute: Function,
        barrier: {
          barrierID: 1,
          priority: barrier
        },
        compute: Function
      ],
      next: [
        Node {
          seq: [
            check: defined,
            mov: stack store,
            check: changed,
            mov: stack store
          ],
          next: [
            Node {seq: [], next: []},
            Node {
              seq: [
                mov: store a,
                compute: Function,
                check: defined,
                check: changed,
                mov: stack store
              ],
              next: [
                Node {
                  seq: [
                    check: defined,
                    mov: stack store,
                    check: changed,
                    mov: stack store
                  ],
                  next: [
                    Node {seq: [], next: []},
                    Node {
                      seq: [
                        run: watcher
                      ],
                      next: []
                    }
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;
